web/app/themes/theagsc/assets/styles/common/_global.less
body {
	font-family:@tisa, sans-serif;
	background: @bg;
	color:@black;
}

body, input {-webkit-font-smoothing: antialiased;}

h1 {
	font-family:@museo, sans-serif;
	margin-top: 10px;
	font-size: 3em;
	font-weight: 500;
}
time {
	display: block;
	font-family:@museo, sans-serif;
	font-size: 1.6em;
	color:@light-grey;
	font-weight: 300;
	margin-bottom: 25px;
}
p {
	font-size: 1.3em;
	line-height: 27px;
	margin:0 auto 16px auto;

	@media @sm {
		line-height: 29px;
	}
}

p a, li a {color:@green;}

a:hover {
	color:@green;
	text-decoration: none;

	svg {
		fill:@dark-green;
	}
}
article {
	p a:hover, ul a:hover, h1 a:hover, h2 a:hover {border-bottom: solid 2px fade(@green, 80%);}
}
a:focus {text-decoration: none !important; color:@green;}

.collapsing {
    -webkit-transition: none;
    transition: none;
    display: none;
}
.wrap {
	position: relative;
	z-index: 999;
	padding-left: 20px;
	padding-right:20px;
	padding-top:20px;
	margin-top: 50px;
}
.wrap .content {
	margin:0 auto;
	max-width:1300px;
}

.home .wrap {z-index: 9999;}

.single, .page, .category, .post-type-archive-work {
	.sidebar-primary {
		.main {
			margin: 0 auto;
			float: none;
			width:auto;
		}
	}
}
@media @sm {
	.single .wrap, .page .wrap, .category .wrap,  .post-type-archive-work .wrap {padding:20px 40px 0px 40px;}
}

.home .wrap {margin-top: auto;}
svg, img.svg {
	.icon32;
}
img.svg {display: none !important;}
.main {padding:0 !important;}
.row {margin: 0;}

a.top {
	position: fixed;
	bottom:40px;
	right:40px;
	width:40px;
	height:40px;
	display: none;
	z-index:9999;
	padding:0 !important;
	border:0 !important;
	visibility: hidden;

	@media @sm {visibility: visible;}

	svg {
		transform:rotate(-90deg);
		fill:@lighter-grey;
	}
}
code {color:@dark-grey; background: @warm-grey;}

pre {
	.articlewidth;
	.border;
	background:@warm-grey;
	border: 0;
	font-size: inherit;
	padding:20px 25px;
	margin: 20px auto 30px auto;
}

hr {
	width:300px;
	.center;
	border-top:solid 2px @lightest-grey;
	margin-top: 40px;
	margin-bottom: 50px;
}

.sidebar {display: none;}

article img {
	display: block;
	height: auto;
	.center;
	margin-top: 20px;
	margin-bottom: 30px;
	max-width: 900px;
}
article.type-post .entry-content p:first-of-type::first-letter {
	float: left;
	font-size: 4.5em;
	font-weight: bold;
	line-height: 87px;
	padding:0px 15px 0px 0px;
	font-family: @museo;

}
// .menu-indiegogo {display: none !important;}
// .menu-indiegogo a {color:#eb1478 !important;}
// .menu-indiegogo a:hover {color:@green !important;}
//
// .home {
// 	.menu-indiegogo a {color:white !important; background: #eb1478 !important; height:36px !important; line-height: 21px !important; padding:8px 8px 10px 8px !important; .border; top:6px;
//
// 		@media @sm {line-height:36px;}
// 	}
// =======
// .menu-indiegogo {display: none !important;}
// .menu-indiegogo a {color:#eb1478 !important; line-height: 21px !important;}
// .menu-indiegogo a:hover {color:@green !important;}
//
// .home {
// 	.menu-indiegogo a {color:white !important; background: #eb1478 !important; height:36px !important; line-height: 36px; padding:8px 8px 10px 8px !important; .border; top:6px;}
// >>>>>>> 42df26567a255facdc9d4e0c1a68b645247494e3
// 	.menu-indiegogo a:hover {color:#eb1478 !important; background: white !important; border-bottom: none !important;}
//
// }

